# quick

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  calendar.c  calendar.tmpl  configure.ac  css.tmpl  dating.css  dating.tmpl  dav.c  dav.tmpl  dependencies.list  files.c  files.tmpl  footer.tmpl  header.tmpl  index.html  index.tmpl  microblog-config.tmpl  microblog-menu.tmpls  microblog.c  microblog.css  microblog.d  microblog.tmpl  money.c  money.tmpl  nslookup.c  nslookup.tmpl  ocr.cpp  ocr.cxx  ocr.tmpl  prep-build-scripts.sh  product-page.tmpl  remote.d  remote.tmpl  scripts.tmpl  templatizer.d  (+3 more)
apache2/: quick.conf
dav/: Makefile  alire.toml  build.sh  clean.sh  dav.gpr
dav/src/: dav.adb  dav.ads  quick-bitcoin-core.adb  quick-bitcoin-core.ads  quick-bitcoin.adb  quick-bitcoin.ads  quick-dating.adb  quick-dating.ads  quick-microblog.adb  quick-microblog.ads  quick.ads  templatizer-http.adb  templatizer-http.ads  templatizer-rest.adb  templatizer-rest.ads  templatizer-safe_integers.adb  templatizer-safe_integers.ads  templatizer-storage.adb  templatizer-storage.ads  templatizer.adb  templatizer.ads
js/: sort-table.js
libtemplatizer/: query.d
po/: nslookup.pot
po/pt_BR/: nslookup.po
